fix(nav): Smaller text on mobile

--- a/local_packages/corporate/Resources/Public/src/scss/partials/_nav.scss
+++ b/local_packages/corporate/Resources/Public/src/scss/partials/_nav.scss
@@ -8,10 +8,14 @@
 }
 
 .nav--menu-item {
-  font-size: 1.2em;
+  font-size: 1em;
   text-decoration: none;
   color: $color-light;
   border-bottom: 1px solid transparent;
+
+  @media (min-width: 768px) {
+    font-size: 1.2em;
+  }
 }
 
 @media (min-width: 768px) {
